--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "mongoose": "^7.1.0",
     "next": "13.3.4",
     "next-auth": "^4.22.1",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-toastify": "^9.1.2"
+    "react-toastify": "^9.1.2",
+    "swr": "^2.1.5"
   }
 }
