--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.10.8",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.7",
+    "moment": "^2.29.4",
     "mongoose": "^7.1.0",
     "next": "13.3.4",
     "next-auth": "^4.22.1",
