--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.3.4",
     "next-auth": "^4.22.1",
     "next-connect": "^0.13.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
