--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "mongoose": "^7.2.0",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
-    "next-connect": "^1.0.0",
+    "next-connect": "0.12.1",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
