--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.12",
+    "jszip": "^3.10.1",
     "moment": "^2.29.4",
     "mongoose": "^7.2.0",
     "next": "13.4.4",
